# dofus-companion

./: .gitignore  .prettierignore  CHANGELOG.md  DOFUS_COMPANION_V0.4_BRIEF.md  DOFUS_OVERLAY_CLAUDE_CODE_BRIEF.md  HANDOFF_MACOS_ELHADI.md  LICENSE  README.en.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci-web.yml  ci.yml  release.yml  update-release-fallback.yml
app/: eslint.config.js  globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  package.json  page.tsx  robots.ts  sitemap.ts
app/changelog/: page.tsx
app/contribute/: page.tsx
app/decouvre/: opengraph-image.tsx  page.tsx
app/download/: page.tsx
app/faq/: opengraph-image.tsx  page.tsx
app/security/: page.tsx
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/support/: page.tsx
components/: AnkamaDisclaimer.tsx  ComingSoon.tsx  Footer.tsx  LangSwitcher.tsx  MobileNav.tsx  Nav.tsx
components/brand/: LogoMark.tsx
components/decouvre/: ThemeToggleContext.tsx  ThemedScreenshot.tsx
data/: hero-dungeon.json  release-fallback.json
docs/: COMBAT-CARDS-CONTRIBUTING.md  DATA-CONTRIBUTING.md  I18N-AND-STRATEGY.md
lib/: env.ts  format.ts  github.ts  messages.ts  rate-limit.ts  virustotal.ts
messages/: en.json  fr.json
public/: llms.txt  robots.txt
scraper/: eslint.config.js  package.json  tsconfig.json
scripts/: shape-release.mjs
web/: .env.example  README.md  next.config.ts  package.json
(+197 files in other folders)
